--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -14,7 +14,7 @@
                     Register
                 </h2>
             </div>
-            <form class="mt-8 space-y-6" action="register method="POST">
+            <form class="mt-8 space-y-6" action="register" method="POST">
                 <input type="hidden" name="remember" value="true">
                 <div class="rounded-md shadow-sm -space-y-px">
                     <div>
@@ -65,5 +65,7 @@
             </div>
         </div>
     </div>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    {% include "includes/errors.html" %}
 </body>
 </html>
