--- a/app/templates/includes/base.html
+++ b/app/templates/includes/base.html
@@ -8,9 +8,12 @@
     <link rel="shortcut icon" type="image/png" href="/static/assets/images/logos/favicon.png" />
     <link rel="stylesheet" href="/static/assets/css/styles.css" />
     <link rel="stylesheet" href="/static/assets/css/reset.css" />
+    <link rel="stylesheet" href="/static/assets/css/fontawesome-iconpicker.css" />
+    <link rel="stylesheet" href="/static/assets/css/fontawesome-iconpicker.min.css" />
     <link rel="stylesheet" href="/static/assets/css/styles.min.css" />
     <link rel="stylesheet" href="extensions/sticky-header/bootstrap-table-sticky-header.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/emoji-picker-element@1.2.5/dist/emoji-picker-element.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 
@@ -42,6 +45,7 @@
     <script src="/static/assets/js/jquery.emojiarea.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="/static/assets/js/main.js"></script> 
+    <script src="https://twemoji.maxcdn.com/v/latest/twemoji.min.js"></script>
     {% include "includes/errors.html" %}
 </body>
 
