--- a/app/templates/mytasks.html
+++ b/app/templates/mytasks.html
@@ -26,309 +26,37 @@
         </thead>
         <div>
           <tbody>
-          <tr>
-            <td class="border-bottom-0">
-              <h6 class="fw-semibold mb-1">Clean kitchen</h6>
-            </td>
-            <td class="border-bottom-0">
-              <div class="d-flex align-items-center gap-2">
-                <span class="badge bg-primary rounded-3 fw-semibold">Home</span>
-              </div>
-            </td>
-            <td class="border-bottom-0">
-              <h6 class="fw-semibold mb-0 fs-4">3 Days</h6>
-            </td>
-            <td class="border-bottom-0">
-              <div class="dropdown">
-                <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton1"
-                  data-bs-toggle="dropdown" aria-expanded="false">
-                  Action
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                  <li><a class="dropdown-item text-success" href="#">Done</a></li>
-                  <li><a class="dropdown-item text-danger" href="#">Delete</a></li>
-                </ul>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td class="border-bottom-0">
-              <h6 class="fw-semibold mb-1">Clean kitchen</h6>
-            </td>
-            <td class="border-bottom-0">
-              <div class="d-flex align-items-center gap-2">
-                <span class="badge bg-primary rounded-3 fw-semibold">Home</span>
-              </div>
-            </td>
-            <td class="border-bottom-0">
-              <h6 class="fw-semibold mb-0 fs-4">3 Days</h6>
-            </td>
-            <td class="border-bottom-0">
-              <div class="dropdown">
-                <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton1"
-                  data-bs-toggle="dropdown" aria-expanded="false">
-                  Action
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                  <li><a class="dropdown-item text-success" href="#">Done</a></li>
-                  <li><a class="dropdown-item text-danger" href="#">Delete</a></li>
-                </ul>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td class="border-bottom-0">
-              <h6 class="fw-semibold mb-1">Clean kitchen</h6>
-            </td>
-            <td class="border-bottom-0">
-              <div class="d-flex align-items-center gap-2">
-                <span class="badge bg-primary rounded-3 fw-semibold">Home</span>
-              </div>
-            </td>
-            <td class="border-bottom-0">
-              <h6 class="fw-semibold mb-0 fs-4">3 Days</h6>
-            </td>
-            <td class="border-bottom-0">
-              <div class="dropdown">
-                <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton1"
-                  data-bs-toggle="dropdown" aria-expanded="false">
-                  Action
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                  <li><a class="dropdown-item text-success" href="#">Done</a></li>
-                  <li><a class="dropdown-item text-danger" href="#">Delete</a></li>
-                </ul>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td class="border-bottom-0">
-              <h6 class="fw-semibold mb-1">Clean kitchen</h6>
-            </td>
-            <td class="border-bottom-0">
-              <div class="d-flex align-items-center gap-2">
-                <span class="badge bg-primary rounded-3 fw-semibold">Home</span>
-              </div>
-            </td>
-            <td class="border-bottom-0">
-              <h6 class="fw-semibold mb-0 fs-4">3 Days</h6>
-            </td>
-            <td class="border-bottom-0">
-              <div class="dropdown">
-                <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton1"
-                  data-bs-toggle="dropdown" aria-expanded="false">
-                  Action
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                  <li><a class="dropdown-item text-success" href="#">Done</a></li>
-                  <li><a class="dropdown-item text-danger" href="#">Delete</a></li>
-                </ul>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td class="border-bottom-0">
-              <h6 class="fw-semibold mb-1">Clean kitchen</h6>
-            </td>
-            <td class="border-bottom-0">
-              <div class="d-flex align-items-center gap-2">
-                <span class="badge bg-primary rounded-3 fw-semibold">Home</span>
-              </div>
-            </td>
-            <td class="border-bottom-0">
-              <h6 class="fw-semibold mb-0 fs-4">3 Days</h6>
-            </td>
-            <td class="border-bottom-0">
-              <div class="dropdown">
-                <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton1"
-                  data-bs-toggle="dropdown" aria-expanded="false">
-                  Action
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                  <li><a class="dropdown-item text-success" href="#">Done</a></li>
-                  <li><a class="dropdown-item text-danger" href="#">Delete</a></li>
-                </ul>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td class="border-bottom-0">
-              <h6 class="fw-semibold mb-1">Clean kitchen</h6>
-            </td>
-            <td class="border-bottom-0">
-              <div class="d-flex align-items-center gap-2">
-                <span class="badge bg-primary rounded-3 fw-semibold">Home</span>
-              </div>
-            </td>
-            <td class="border-bottom-0">
-              <h6 class="fw-semibold mb-0 fs-4">3 Days</h6>
-            </td>
-            <td class="border-bottom-0">
-              <div class="dropdown">
-                <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton1"
-                  data-bs-toggle="dropdown" aria-expanded="false">
-                  Action
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                  <li><a class="dropdown-item text-success" href="#">Done</a></li>
-                  <li><a class="dropdown-item text-danger" href="#">Delete</a></li>
-                </ul>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td class="border-bottom-0">
-              <h6 class="fw-semibold mb-1">Clean kitchen</h6>
-            </td>
-            <td class="border-bottom-0">
-              <div class="d-flex align-items-center gap-2">
-                <span class="badge bg-primary rounded-3 fw-semibold">Home</span>
-              </div>
-            </td>
-            <td class="border-bottom-0">
-              <h6 class="fw-semibold mb-0 fs-4">3 Days</h6>
-            </td>
-            <td class="border-bottom-0">
-              <div class="dropdown">
-                <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton1"
-                  data-bs-toggle="dropdown" aria-expanded="false">
-                  Action
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                  <li><a class="dropdown-item text-success" href="#">Done</a></li>
-                  <li><a class="dropdown-item text-danger" href="#">Delete</a></li>
-                </ul>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td class="border-bottom-0">
-              <h6 class="fw-semibold mb-1">Clean kitchen</h6>
-            </td>
-            <td class="border-bottom-0">
-              <div class="d-flex align-items-center gap-2">
-                <span class="badge bg-primary rounded-3 fw-semibold">Home</span>
-              </div>
-            </td>
-            <td class="border-bottom-0">
-              <h6 class="fw-semibold mb-0 fs-4">3 Days</h6>
-            </td>
-            <td class="border-bottom-0">
-              <div class="dropdown">
-                <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton1"
-                  data-bs-toggle="dropdown" aria-expanded="false">
-                  Action
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                  <li><a class="dropdown-item text-success" href="#">Done</a></li>
-                  <li><a class="dropdown-item text-danger" href="#">Delete</a></li>
-                </ul>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td class="border-bottom-0">
-              <h6 class="fw-semibold mb-1">Clean kitchen</h6>
-            </td>
-            <td class="border-bottom-0">
-              <div class="d-flex align-items-center gap-2">
-                <span class="badge bg-primary rounded-3 fw-semibold">Home</span>
-              </div>
-            </td>
-            <td class="border-bottom-0">
-              <h6 class="fw-semibold mb-0 fs-4">3 Days</h6>
-            </td>
-            <td class="border-bottom-0">
-              <div class="dropdown">
-                <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton1"
-                  data-bs-toggle="dropdown" aria-expanded="false">
-                  Action
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                  <li><a class="dropdown-item text-success" href="#">Done</a></li>
-                  <li><a class="dropdown-item text-danger" href="#">Delete</a></li>
-                </ul>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td class="border-bottom-0">
-              <h6 class="fw-semibold mb-1">Clean kitchen</h6>
-            </td>
-            <td class="border-bottom-0">
-              <div class="d-flex align-items-center gap-2">
-                <span class="badge bg-primary rounded-3 fw-semibold">Home</span>
-              </div>
-            </td>
-            <td class="border-bottom-0">
-              <h6 class="fw-semibold mb-0 fs-4">3 Days</h6>
-            </td>
-            <td class="border-bottom-0">
-              <div class="dropdown">
-                <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton1"
-                  data-bs-toggle="dropdown" aria-expanded="false">
-                  Action
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                  <li><a class="dropdown-item text-success" href="#">Done</a></li>
-                  <li><a class="dropdown-item text-danger" href="#">Delete</a></li>
-                </ul>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td class="border-bottom-0">
-              <h6 class="fw-semibold mb-1">Clean kitchen</h6>
-            </td>
-            <td class="border-bottom-0">
-              <div class="d-flex align-items-center gap-2">
-                <span class="badge bg-primary rounded-3 fw-semibold">Home</span>
-              </div>
-            </td>
-            <td class="border-bottom-0">
-              <h6 class="fw-semibold mb-0 fs-4">3 Days</h6>
-            </td>
-            <td class="border-bottom-0">
-              <div class="dropdown">
-                <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton1"
-                  data-bs-toggle="dropdown" aria-expanded="false">
-                  Action
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                  <li><a class="dropdown-item text-success" href="#">Done</a></li>
-                  <li><a class="dropdown-item text-danger" href="#">Delete</a></li>
-                </ul>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td class="border-bottom-0">
-              <h6 class="fw-semibold mb-1">Clean kitchen</h6>
-            </td>
-            <td class="border-bottom-0">
-              <div class="d-flex align-items-center gap-2">
-                <span class="badge bg-primary rounded-3 fw-semibold">Home</span>
-              </div>
-            </td>
-            <td class="border-bottom-0">
-              <h6 class="fw-semibold mb-0 fs-4">3 Days</h6>
-            </td>
-            <td class="border-bottom-0">
-              <div class="dropdown">
-                <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton1"
-                  data-bs-toggle="dropdown" aria-expanded="false">
-                  Action
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                  <li><a class="dropdown-item text-success" href="#">Done</a></li>
-                  <li><a class="dropdown-item text-danger" href="#">Delete</a></li>
-                </ul>
-              </div>
-            </td>
-          </tr>
+          {% for todo_list in current_user.lists %}
+            {% for note in todo_list.notes %}
+              <tr>
+                <td class="border-bottom-0">
+                  <h6 class="fw-semibold mb-1">{{ note.text }}</h6>
+                </td>
+                <td class="border-bottom-0">
+                  <div class="d-flex align-items-center gap-2">
+                    <span class="badge bg-primary rounded-3 fw-semibold">{{ todo_list.title }} {{ todo_list.icon }}</span>
+                  </div>
+                </td>
+                <td class="border-bottom-0">
+                  <h6 class="fw-semibold mb-0 fs-4">{{ note.done_att.strftime("%d/%m/%Y")}}</h6>
+                </td>
+                <td class="border-bottom-0">
+                  <div class="dropdown">
+                    <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton1"
+                      data-bs-toggle="dropdown" aria-expanded="false">
+                      Action
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                      <li><a class="dropdown-item text-success" href="#">Done</a></li>
+                      <li><a class="dropdown-item text-danger" href="#">Delete</a></li>
+                    </ul>
+                  </div>
+                </td>
+              </tr>
+            {% endfor %}  
+          {% endfor %}
         </tbody>
         </div>
-        
       </table>
     </div>
   </div>
