--- a/app/templates/includes/base.html
+++ b/app/templates/includes/base.html
@@ -11,9 +11,7 @@
     <link rel="stylesheet" href="/static/assets/css/fontawesome-iconpicker.css" />
     <link rel="stylesheet" href="/static/assets/css/fontawesome-iconpicker.min.css" />
     <link rel="stylesheet" href="/static/assets/css/styles.min.css" />
-    <link rel="stylesheet" href="extensions/sticky-header/bootstrap-table-sticky-header.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/emoji-picker-element@1.2.5/dist/emoji-picker-element.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 
@@ -38,9 +36,9 @@
     <script src="/static/assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/static/assets/js/sidebarmenu.js"></script>
     <script src="/static/assets/js/app.min.js"></script>
-    <script src="/static/assets/libs/apexcharts/dist/apexcharts.min.js"></script>
+    <!-- <script src="/static/assets/libs/apexcharts/dist/apexcharts.min.js"></script> -->
     <script src="/static/assets/libs/simplebar/dist/simplebar.js"></script>
-    <script src="/static/assets/js/dashboard.js"></script>
+    <!-- <script src="/static/assets/js/dashboard.js"></script> -->
     <script src="/static/assets/js/jquery.emojiarea.js"></script>
     <script src="/static/assets/js/jquery.emojiarea.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
