Consertado errors de não adicionar listas

--- a/app/templates/includes/base.html
+++ b/app/templates/includes/base.html
@@ -38,7 +38,7 @@
     <script src="/static/assets/js/app.min.js"></script>
     <!-- <script src="/static/assets/libs/apexcharts/dist/apexcharts.min.js"></script> -->
     <script src="/static/assets/libs/simplebar/dist/simplebar.js"></script>
-    <!-- <script src="/static/assets/js/dashboard.js"></script> -->
+    <script src="/static/assets/js/dashboard.js"></script>
     <script src="/static/assets/js/jquery.emojiarea.js"></script>
     <script src="/static/assets/js/jquery.emojiarea.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
